git-svn-id: http://svn.vdombox.ru/flextools/trunk@5154 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Editor/v.01/src/VdomHelpEditor.mxml
+++ b/Help/Editor/v.01/src/VdomHelpEditor.mxml
@@ -46,10 +46,10 @@
 		 *  + вставить ресурс в хмл
 		 * 
 		 * -------------------
-		 * -создать загрузочную хмл
+		 * - создать загрузочную хмл
 		 * - изменение свойств страницы 
-		 * - дисаблить кнопку создания продукта
-		 * - 
+		 * + дисаблить кнопку создания продукта
+		 * 
 		 */
 		 
 		 
@@ -229,6 +229,7 @@
 			{
 				editProduct.label = "Add Product";
 				tree.dataProvider = null;
+				htmlSource.text = "";
 				return;
 			}
 			
