git-svn-id: http://svn.vdombox.ru/flextools/trunk@5228 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/_src/theme/css/mainWindow.css
+++ b/IDE/v.01Core/_src/theme/css/mainWindow.css
@@ -47,6 +47,12 @@ MainTitleBar
 	backgroundSize: "100%";
 }
 
+.actionButton
+{
+	cornerRadius: 0;
+	skin: Embed(skinClass="ActionButtonSkin");
+}
+
 .vdomLogo
 {
 	borderSkin: ClassReference("net.vdombox.ide.view.skins.HalloBorderWithImagePositioning");
