--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/ApplicationsManagment.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/ApplicationsManagment.mxml
@@ -7,12 +7,6 @@
 	
 	verticalGap="0"
 	xmlns:controls1="com.benclinkinbeard.controls.*">
-	<mx:Style>
-		.actionButton
-		{
-			cornerRadius: 0;
-		}
-	</mx:Style>
 	<mx:HBox 
 		id="buttonBar"
 		
@@ -42,9 +36,14 @@
 			id="mainViewStack"
 			
 			height="100%" styleName="vdomLogo" width="100%"/>
-		<controls1:SmoothScrollingList itemRenderer="net.vdombox.ide.view.controls.ApplicationItemRenderer"
-			id="applicationsList" variableRowHeight="true"
+		<controls1:SmoothScrollingList 
+			id="applicationsList"
 			
-			height="100%" width="300" backgroundAlpha=".0"/>
+			height="100%"
+			itemRenderer="net.vdombox.ide.view.controls.ApplicationItemRenderer"
+			width="300"
+			
+			backgroundAlpha=".0"
+			variableRowHeight="true"/>
 	</mx:HBox>
 </mx:VBox>
