--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/ModulesManagment.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/ModulesManagment.mxml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml">
-	<mx:ToggleButtonBar id="modulesButtonBar" x="0" y="0" width="100%"  height="20"/>
-	<mx:Canvas id="modulePlacement"  top="20" width="100%" height="100%"/>
+<mx:Canvas 
+	xmlns:mx="http://www.adobe.com/2006/mxml">
+	<mx:Canvas 
+		height="35" styleName="buttonBar" width="100%">
+		<mx:ToggleButtonBar 
+			id="modulesButtonBar"
+			horizontalGap="-1"
+			height="35" x="110"
+			buttonStyleName="actionButton"/>
+	</mx:Canvas>
+	<mx:Canvas 
+		id="modulePlacement"
+		
+		height="100%" width="100%"
+		
+		top="35"/>
 </mx:Canvas>
